fluxcd/clusters/pi/home/plex/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
  namespace: home
subsets:
  - addresses:
      - ip: 192.168.86.11
    ports:
      - port: 32400
