fluxcd/clusters/pi/home/plex/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: home
spec:
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
